--- a/frontend/HR VIEW/styles/hrstudentProfile.css
+++ b/frontend/HR VIEW/styles/hrstudentProfile.css
@@ -883,7 +883,7 @@
 .proceedBtn {
     height: 34px;
     width: 30%;
-    background-color: #096D49;
+    background-color: #F44336;
     border-radius: 4px;
     color: #FFFFFF;
     display: flex;
