--- a/frontend/HR VIEW/styles/hrGrid.css
+++ b/frontend/HR VIEW/styles/hrGrid.css
@@ -658,7 +658,7 @@
     display: none;
 }
 
-.deactivate {
+.delete {
     height: 40px;
     width: 100%;
     display: flex;
@@ -670,11 +670,11 @@
     padding: 0vh 1vh;
 }
 
-.deactivate:hover {
+.delete:hover {
     background-color: #F3F3F3;
 }
 
-.delete {
+.deactivate {
     height: 40px;
     width: 100%;
     display: flex;
@@ -686,7 +686,7 @@
     padding: 0vh 1vh;
 }
 
-.delete:hover {
+.deactivate:hover {
     background-color: #F3F3F3;
 }
 
@@ -846,4 +846,207 @@
 
 .viewDetails img {
     -webkit-user-drag: none;
+}
+
+
+/* Mini Modal */
+
+.overlay2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    display: none;
+    z-index: 10;
+}
+
+.confirmModal {
+    height: 171px;
+    width: 30%;
+    background-color: #FFFFFF;
+    margin: 20vw auto;
+    border-radius: 4px;
+}
+
+.modalHead2 {
+    height: 38px;
+    width: 100%;
+    border-bottom: 1px solid #d9d9d9;
+    display: flex;
+    justify-content: space-between;
+    padding: 0vh 1vh;
+    background-color: #FFFFFF;
+}
+
+.headText2 {
+    height: auto;
+    width: auto;
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    user-select: none;
+    font-family: Nunito Sans;
+    font-size: 16px;
+    font-weight: 400;
+    background-color: #FFFFFF;
+}
+
+.confirmTxt {
+    height: 87px;
+    width: 100%;
+    /* border: 1px solid black; */
+    display: flex;
+    /* align-items: center; */
+    user-select: none;
+    font-family: Nunito Sans;
+    font-size: 13px;
+    font-weight: 300;
+    padding: 2vh;
+    background-color: #FFFFFF;
+}
+
+.confirmBtnContain {
+    height: 44px;
+    width: 100%;
+    /* border: 1px solid blue; */
+    display: flex;
+    /* align-items: center; */
+    justify-content: right;
+    user-select: none;
+    /* gap: 1vh; */
+    padding: 0vh 1vh;
+    background-color: #FFFFFF;
+
+}
+
+.cancelBtn {
+    height: 32px;
+    width: 20%;
+    /* border: 1px solid green; */
+    color: #096D49;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Nunito Sans;
+    font-weight: 300;
+    font-size: 14px;
+    background-color: #FFFFFF;
+}
+
+.proceedBtn {
+    height: 34px;
+    width: 30%;
+    background-color: #F44336;
+    border-radius: 4px;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Nunito Sans;
+    font-weight: 200;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+/* ------------Success modal--- */
+.overlay4 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    display: none;
+    z-index: 10;
+}
+
+.successModal2 {
+    height: 210px;
+    width: 30%;
+    background-color: #FFFFFF;
+    margin: 20vw auto;
+    border-radius: 4px;
+}
+
+.modalHead4 {
+    height: 40px;
+    width: 100%;
+    border-bottom: 1px solid #d9d9d9;
+    display: flex;
+    justify-content: space-between;
+    padding: 0vh 2vh;
+    background-color: #FFFFFF;
+}
+
+.modalBody {
+    height: 128px;
+    width: 100%;
+    /* border: 1px solid blue; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1vw;
+    background-color: #FFFFFF;
+
+}
+
+.successImg {
+    height: 70px;
+    width: 20%;
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+}
+
+.successImg img {
+    -webkit-user-drag: none;
+    background-color: #FFFFFF;
+}
+
+.successTxt {
+    height: 24px;
+    width: 100%;
+    /* border: 1px solid purple; */
+    font-family: Nunito Sans;
+    font-size: 13px;
+    font-weight: 400;
+    user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+}
+
+.modalFooter {
+    height: 40px;
+    width: 100%;
+    /* border: 1px solid blue; */
+    display: flex;
+    justify-content: right;
+    padding: 0vh 1vh;
+    background-color: #FFFFFF;
+}
+
+.okayBtn2 {
+    height: 34px;
+    width: 20%;
+    background-color: #096D49;
+    border-radius: 4px;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Nunito Sans;
+    font-size: 14px;
+    font-weight: 300;
+    cursor: pointer;
+}
+
+.okayBtn2:hover {
+    background-color: #aac8be;
 }
